--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="text-center" style="background-color: gray">
+          <h1>Admin Area</h1>
+          <h5>Login to manage property</h5>
+        </div>
+        <hr />
+        <form action="">
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label"
+              >Email:
+            </label>
+            <input
+              type="email"
+              class="form-control"
+              id="formGroupExampleInput"
+              placeholder="Your email..."
+              autocomplete="off"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label"
+              >Password:
+            </label>
+            <input
+              type="password"
+              class="form-control"
+              id="formGroupExampleInput2"
+              placeholder="Your password..."
+            />
+          </div>
+          <button
+            type="button"
+            class="btn btn-primary"
+            style="margin: 10px 0 10px 240px"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
