--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -38,8 +38,15 @@
           >
             Submit
           </button>
+          <div class="mx-auto ta-center fs-body1 p16 pb0 mb24 w100 wmx3">
+            Don't have an account? 
+          </div>
+          <a routerLink="/signup" style="text-decoration: none; cursor: pointer;color: red;">Sign-up</a>
         </form>
       </div>
     </div>
   </div>
+</div>
+<div style="margin: 60px 0 0 60px">
+  <button routerLink="/properties" class="btn btn-primary">View properties</button>
 </div>
