--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -1,1 +1,143 @@
-<p>properties works!</p>
+<nav class="navbar navbar-light bg-primary">
+  <div class="container-fluid">
+    <h2 style="color: white">TC Properties</h2>
+    <div class="d-flex">
+      <button
+        type="button"
+        class="btn btn-success mx-2"
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal"
+        (click)="clickAddProp()"
+      >
+        Add Listing
+      </button>
+      <button type="submit" class="btn btn-danger" routerLink="/login">
+        Logout
+      </button>
+    </div>
+  </div>
+</nav>
+
+<div class="p-5 mb-4 bg-light rounded-3">
+  <div class="container-fluid py-3">
+    <h2 class="display-5 fw-bold">TC Properties</h2>
+    <p class="col-mb-8 fs-4">You can add property details here for free.</p>
+    <button type="submit" class="btn btn-primary">Add</button>
+  </div>
+</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Property Title</th>
+      <th scope="col">Property Price</th>
+      <th scope="col">Property Location</th>
+      <th scope="col">Property Details</th>
+      <th scope="col">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of allProperty">
+      <td>{{data.id}}</td>
+      <td>{{data.ptitle}}</td>
+      <td>{{data.pprice | currency: 'INR'}}</td>
+      <td>{{data.plocation}}</td>
+      <td>{{data.pdetails}}</td>
+      <td>
+        <button type="submit" class="btn btn-success mx-2">View</button>
+        <button
+          type="submit"
+          class="btn btn-primary mx-2"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Edit
+        </button>
+        <button type="submit" (click)="deleteProp(data)" class="btn btn-danger">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Property description</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formValue">
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label"
+              >Enter property title:
+            </label>
+            <input
+              formControlName="ptitle"
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput"
+              placeholder="Property title..."
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label"
+              >Enter property price:
+            </label>
+            <input
+              formControlName="pprice"
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput2"
+              placeholder="Property price..."
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput3" class="form-label"
+              >Enter property location:
+            </label>
+            <input
+              formControlName="plocation"
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput3"
+              placeholder="Property location..."
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput4" class="form-label"
+              >Enter property details:
+            </label>
+            <input
+              formControlName="pdetails"
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput4"
+              placeholder="Property details..."
+            />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="clear" class="btn btn-secondary" data-bs-dismiss="modal">
+          Clear
+        </button>
+        <button type="button" *ngIf="showEdit" class="btn btn-warning">Update Listing</button>
+        <button type="button" *ngIf="showAdd" class="btn btn-primary" (click)="addProp()">Add Listing</button>
+      </div>
+    </div>
+  </div>
+</div>
