--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,45 @@
-<p>signup works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="text-center">
+          <h1>Admin Area</h1>
+          <h5>Sign-up to manage property</h5>
+        </div>
+        <hr />
+        <form action="">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="Your name: "
+              autocomplete="off"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email: </label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Your email..."
+              autocomplete="off"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password: </label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Your password..."
+            />
+          </div>
+          <button type="button" class="btn btn-primary">Sign-up</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
